# task-tracker

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yml  docker-compose.yml-example  mypy.ini  pyproject.toml  ruff.toml
docs/: NOTE.md  TODO[CODE].md  TODO[REPORT].md  architecture.md
src/api_gateway/: Dockerfile  service.py
src/canban_connectors/: Dockerfile.kaiten  Dockerfile.trello  kaiten_service.py
src/canban_connectors/core/: __init__.py  base.py
src/canban_connectors/core/connectors/: __init__.py  kaiten_connector.py  trello_connector.py
src/configs/: logging.py
src/similarity/: Dockerfile
src/similarity/core/: __init__.py  base.py
src/speech_transcriptor/: Dockerfile  service.py
src/speech_transcriptor/core/: __init__.py  base.py
src/speech_transcriptor/core/speech2text/: api_transcriptor.py  local_transriptor.py
src/text_summarizer/: Dockerfile  service.py
src/text_summarizer/core/: __init__.py  base.py
src/text_summarizer/core/text2summary/: __init__.py  api_summarizer.py  local_summarizer.py
src/user_connectors/: Dockerfile.streamlit  Dockerfile.telegram
testmodules/: canban_connectors.ipynb  similarity.ipynb  speech_transcriptor.ipynb  text_summarizer.ipynb
