[project]
name = "task-tracker"
version = "0.1.0"
description = "Приложение для распознавания переговоров и их суммаризации, а также отслеживания статусов задач в рабочих чатах."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[project.optional-dependencies]

api-gateway = [
    "fastapi>=0.120.1",
]

canban-connectors = [

]

similarity = [

]

speech-transcriptor = [
    "faiss-gpu-cu12>=1.12.0",
    "nemo>=7.2.4",
    "nemo-toolkit[asr]>=2.5.2",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "pyannote-audio>=3.3.2,<4.0.0", # Совместимость с whisperx
    "pydub>=0.25.1",
    "torch>=2.4.0,<2.9.0", # Совместима с pyannote
    "torchaudio>=2.4.0,<2.9.0",
    "uvicorn>=0.38.0",
    "openai-whisper>=20231117",
    "whisperx>=3.1.0,<3.7.0",
    "onnx==1.18",
    "nvidia-cudnn-cu12>=9.10.2.21",
    "nvidia-cublas-cu12>=12.8.4.1",
    "noisereduce>=3.0.3",
    "scipy>=1.16.3",
]

text-summarizer = [

]

user-connectors = [

]
