[project]
name = "task-tracker"
version = "0.1.0"
description = "Приложение для распознавания переговоров и их суммаризации, а также отслеживания статусов задач в рабочих чатах."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aio-pika>=9.5.8",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[project.optional-dependencies]

api-gateway = [
    "fastapi>=0.120.1",
    "uvicorn>=0.38.0",
]

canban-connectors = [
    "py-trello>=0.20.1",
]

similarity = [

]

speech-transcriptor = [
    "noisereduce>=3.0.3",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "pyannote-audio>=4.0.1",
    "pydub>=0.25.1",
    "scipy>=1.15.3",
    "torch>=2.9.0",
]

text-summarizer = [
    "openai>=2.8.1",
    "vllm>=0.11.2",
]

user-connectors = [

]

dev = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "mypy>=1.19.0",
    "nbstripout>=0.8.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]
